# slap

./: README.md  main.py  models  pyproject.toml
asset/: sp_whisper.service
templates/: index.html  recordings.html
