[project]
name = "slap"
version = "0.1.0"
description = "press a hotkey, record, clean transcription with an LLM, copy to clipboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evdev>=1.9.2",
    "flask>=3.0.0",
    "numpy>=2.3.4",
    "pydantic>=2.12.4",
    "readchar>=4.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
]

[project.scripts]
slap = "main:main"

[tool.setuptools]
py-modules = ["main"]
